# weather-fast-api

./: README.md
weather-fast-api-poc/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
weather-fast-api-poc/.github/workflows/: build.yaml  release.yaml  tests.yaml
weather-fast-api-poc/tests/: conftest.py  test_healthcheck.py
weather-fast-api-poc/weather-fast-api-poc/: main.py  settings.py
weather-fast-api-poc/weather-fast-api-poc/migrations/: 0000_migrations.sql
weather-fast-api-poc/weather-fast-api-poc/models/: __init__.py
weather-fast-api-poc/weather-fast-api-poc/tools/: __init__.py  migrations.py
weather-fast-api-poc/weather_fast_api_poc/: __init__.py  dev.env  main.py  settings.py  test_env.py
weather-fast-api-poc/weather_fast_api_poc/models/: LocationRequest.py  WeatherAPIResponse.py  __init__.py
weather-fast-api-poc/weather_fast_api_poc/routers/: __init__.py  healthcheck.py  weather.py
weather-fast-api-poc/weather_fast_api_poc/services/: weather_service.py
weather-fast-api-poc/weather_fast_api_poc/tools/: __init__.py
