[tool.poetry]
name = "weather-fast-api-poc"
version = "0.1.0"
description = "simple webserver to process openweather api response"
authors = ["Marcell H <yohannes.marcell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.2"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
databases = {extras = ["asyncpg"], version = "^0.6.1"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pre-commit = "^2.20.0"
pytest-cov = "^4.0.0"
pylint = "^2.15.5"
mypy = "^0.982"
bandit = {extras = ["toml"], version = "^1.7.4"}
black = "^22.10.0"

[tool.poetry.group.testing.dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
pytest-cov = "^4.0.0"
pylint = "^2.15.5"
mypy = "^0.982"
bandit = {extras = ["toml"], version = "^1.7.4"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -q --cov=weather-fast-api-poc --cov-report=term-missing:skip-covered --no-cov-on-fail --cov-fail-under=100 --cov-branch"

[tool.pylint.main]
ignore-paths = 'tests/'
jobs=0
extension-pkg-whitelist = ["pydantic"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
